--- a/repepo/experiments/evaluate_base_propensity.ipynb
+++ b/repepo/experiments/evaluate_base_propensity.ipynb
@@ -15,6 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%env WORK_DIR = /home/daniel/ml_workspace/repepo/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from repepo.steering.sweeps.evaluate_base_propensity import iter_configs\n",
     "from repepo.steering.utils.helpers import load_eval_result\n",
     "\n",
